--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "firebase": "^9.9.4",
     "react": "^18.2.0",
+    "react-aos": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-loader-spinner": "^5.3.4",
